--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           source: "."
           target: "/home/ubuntu/cpen321-m1-starter-app"
 
-      - name: Rebuild and Redeploy
+      - name: Setup Docker and Deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -30,6 +30,32 @@ jobs:
           script: |
             cd /home/ubuntu/cpen321-m1-starter-app
             
+            # Install Docker if not already installed
+            if ! command -v docker &> /dev/null; then
+              echo "Installing Docker..."
+              sudo apt-get update
+              sudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
+              curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+              echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+              sudo apt-get update
+              sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+            fi
+            
+            # Install Docker Compose if not already installed
+            if ! command -v docker-compose &> /dev/null; then
+              echo "Installing Docker Compose..."
+              sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              sudo chmod +x /usr/local/bin/docker-compose
+            fi
+            
+            # Add ubuntu user to docker group (if not already added)
+            sudo usermod -aG docker ubuntu || true
+            
+            # Start Docker service
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            
+            # Create .env file
             cat > .env << EOF
             PORT=${{ secrets.PORT }}
             DB_URI=${{ secrets.DB_URI }}
@@ -37,7 +63,8 @@ jobs:
 
             chmod 600 .env
 
-            docker-compose down
-            docker-compose --env-file .env build
-            docker-compose --env-file .env up -d
+            # Use sudo for docker-compose commands
+            sudo docker-compose down || true
+            sudo docker-compose --env-file .env build
+            sudo docker-compose --env-file .env up -d
           
