--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,8 +57,8 @@ jobs:
             
             # Create .env file
             cat > .env << EOF
-            PORT=${{ secrets.PORT }}
-            MONGODB_URI=${{ secrets.DB_URI }}
+            PORT=${{ secrets.PROD_PORT }}
+            MONGODB_URI=${{ secrets.PROD_DB_URI }}
             EOF
 
             chmod 600 .env
