--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,8 @@ jobs:
             cat > .env << EOF
             PORT=${{ secrets.PROD_PORT }}
             MONGODB_URI=${{ secrets.PROD_DB_URI }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
             EOF
 
             chmod 600 .env
